--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 spring.application.name=pokerium_api
 
-spring.datasource.url=jdbc:postgresql://${SERVER_URL}:5432/pokerium
+spring.datasource.url=jdbc:postgresql://${SERVER_URL}:${POSTGRES_PORT}/pokerium
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.data.redis.url=redis://:${REDIS_PASSWORD}@${SERVER_URL}:${REDIS_PORT}
 
 server.port=${SERVER_PORT}
